<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyContacts_Test</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="contactName">姓名</string>
    <string name="contactCompany">工作单位</string>
    <string name="privatePhone">私人电话</string>
    <string name="companyPhone">工作电话</string>
    <string name="qq">QQ</string>
    <string name="eMail">电子邮箱</string>
	<string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="empty_contacts">无联系人信息</string>
    <string name="add_contact">添加联系人</string>
    <string name="exit">退出</string>
    <string name="contactview">联系人信息</string>
    <string name="deletecontact">删除联系人</string>
    <string name="contactedit">编辑联系人</string>
    <string name="nameNotEmpty">联系人姓名不能为空！</string>
    <string name="mapinfo">地图信息</string>
</resources>
