<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageButton
        android:id="@+id/imageButton_ContactPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="22dp"
        android:src="@android:drawable/ic_menu_edit"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editText_Name"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageButton_ContactPhoto"
        android:layout_marginRight="49dp"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/contactName" />

    <EditText
        android:id="@+id/editText_Company"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/imageButton_ContactPhoto"
        android:layout_alignLeft="@+id/editText_Name"
        android:inputType="text"
        android:gravity="center"
        android:hint="@string/contactCompany" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton_ContactPhoto"
        android:orientation="vertical" >
        
        <TableRow 
            android:id="@+id/tableRow_PrivatePhone" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView_PrivatePhone"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/privatePhone"/>
            <EditText
                android:id="@+id/editText_PrivatePhone"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:inputType="phone"/>   
        </TableRow>
        
        <TableRow 
            android:id="@+id/tableRow_CompanyPhone" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView_CompanyPhone"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/companyPhone"/>
            <EditText
                android:id="@+id/editText_CompanyPhone"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:inputType="phone"/>   
        </TableRow>
        
        <TableRow 
            android:id="@+id/tableRow_Email" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView_Email"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/eMail"/>
            <EditText
                android:id="@+id/editText_Email"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"/>   
        </TableRow>
        
        <TableRow 
            android:id="@+id/tableRow_QQ" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView_QQ"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/qq"/>
            <EditText
                android:id="@+id/editText_QQ"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:inputType="number"/>   
        </TableRow>
            
    </LinearLayout>

    <Button
        android:id="@+id/button_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/button_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button_Cancel"
        android:text="@string/ok" /> 

</RelativeLayout>